--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body{
-    background: linear-gradient(90deg, rgba(174,237,238,1) 0%, rgba(9,122,255,1) 100%);}
+    background: linear-gradient(90deg, rgba(174,237,238,1) 0%, rgba(9,122,255,1) 100%);
+    font-family: monospace;
+}
 
+
+    
 .botones{
     display: flex;
     justify-content: center;
+    align-items: flex-end;
     gap: 15px;
     padding: 15px;
 }
@@ -12,8 +17,20 @@ body{
     font-weight: bold;
     border: 3px black solid;
     border-radius: 5px;
-    width: 80px;
-    height: 35px;
+    width: 100px;
+    height: 40px;
+}
+
+.colores{
+    text-align: center;
+}
+
+#tamaño{
+    font-size: x-large;
+    font-weight: bold;
+    font-style: oblique;
+    margin: 0;
+    padding: 0;
 }
 
 /* Contenedor del contenedor-grid*/
@@ -28,8 +45,6 @@ body{
 
 .contenedor-grid{
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
     background-color: white;
     height: 300px;
     width: 300px;
@@ -37,8 +52,6 @@ body{
 }
 
 .contenedor-grid div{
-    
-    border: black 1px solid;
     background-color: white;
 }
 
