--- a/style.css
+++ b/style.css
@@ -3,22 +3,30 @@ body{
     font-family: monospace;
 }
 
-
+.main{
+    margin: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
     
 .botones{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     gap: 15px;
     padding: 15px;
+    
 }
 
 .boton{
     font-weight: bold;
-    border: 3px black solid;
+    border: 2px black solid;
     border-radius: 5px;
-    width: 100px;
-    height: 40px;
+    width: 110px;
+    height: 50px;
+    transition: .5s;
 }
 
 .colores{
@@ -46,9 +54,9 @@ body{
 .contenedor-grid{
     display: grid;
     background-color: white;
-    height: 300px;
-    width: 300px;
-    border: black 3px solid;
+    height: 500px;
+    width: 500px;
+    border: black 5px solid;
 }
 
 .contenedor-grid div{
