--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body{
-    background: linear-gradient(90deg, rgba(174,237,238,1) 0%, rgba(9,122,255,1) 100%);
+    background: #fc00ff;
+    background: -webkit-linear-gradient(to right, #00dbde, #fc00ff);
+    background: linear-gradient(to right, #00dbde, #fc00ff);
     font-family: monospace;
+    padding: 0;
+    margin: 0;
 }
 
 .main{
@@ -68,3 +72,35 @@ body{
 }
 
 /*--------grid-close---------*/
+
+@media screen and (max-width: 700px) {
+
+    .contenedor-grid{
+        height: 300px;
+        width: 300px;
+    }
+
+    .boton{
+        width: 80px;
+        height: 40px; 
+    }
+
+}
+
+@media screen and (max-width: 500px){
+
+    .main{
+        flex-direction: column-reverse;
+    }
+
+    .boton{
+        width: 60px;
+        height: 30px;
+        font-size: 10px;
+    }
+
+    .botones{
+        flex-direction: row;
+    }
+
+}
